apply z-index fix to floatpanel in admin

--- a/css/back_styles.css
+++ b/css/back_styles.css
@@ -64,4 +64,4 @@ h2.heading, div.heading {
     padding:20px;
 }
 .alignRight { text-align:right; }
-.wp-admin .mce-floatpanel.mce-popover { z-index:999999 !important; }
+.wp-admin .mce-floatpanel { z-index:999999 !important; }
